--- a/Taller 2 - Optimizacion Costos.ipynb
+++ b/Taller 2 - Optimizacion Costos.ipynb
@@ -96,7 +96,7 @@
       "cell_type": "code",
       "source": [
         "# Cargamos el conjunto de datos desde un archivo CSV\n",
-        "df = pd.read_csv('datos_transacciones.csv')\n",
+        "df = pd.read_csv('./data/taller_2_datos_transacciones.csv')\n",
         "\n",
         "# Visualizamos las primeras filas del DataFrame\n",
         "df.head()\n"
